--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -40,7 +40,7 @@ data$date <- as.Date(data$date, "%Y-%m-%d")
 ```
 ## Mean total number of steps taken per day with histogram
 ##### 1. Histogram of total number of steps taken each day
-```{r,total steps per day, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r total_steps_per_day, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
 
 total.steps <- tapply(data$steps, data$date, FUN = sum, na.rm = TRUE)
 qplot(total.steps, binwidth = 500, xlab ='total number of steps taken each day', ylab = 'Frequency with binwidth = 500')
@@ -62,7 +62,7 @@ Median <- median(total.steps, na.rm = TRUE)
 
 ## Average daily activity pattern
 ##### 1.Time series plot
-```{r,average steps taken, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r average_steps_taken, echo=TRUE, warning=FALSE, message=FALSE}
 
 average <- aggregate(x = list(steps = data$steps), by = list(interval = data$interval),
                      FUN = mean, na.rm = TRUE)
@@ -74,7 +74,7 @@ ggplot(data = average, aes(x = interval, y = steps))+
 ```
 
 ##### 2. 5-minute interval on average across all the days in the dataset that contains the maximum number of steps
-```{r, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r, echo=TRUE, warning=FALSE, message=FALSE}
 mostSteps <- which.max(average$steps)
 timeMostSteps <- average[mostSteps,][1,1]
 answer <- gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2",timeMostSteps)
@@ -85,7 +85,7 @@ answer <- gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2",timeMostSteps)
 
 ## Imputing missing values
 ##### 1. The total number of missing values
-```{r, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r, echo=TRUE, warning=FALSE, message=FALSE}
 
 numMissingVal <- length(which(is.na(data$steps)))
 
@@ -93,7 +93,7 @@ numMissingVal <- length(which(is.na(data$steps)))
 * Number of missing values: `r numMissingVal`
 
 ##### 2. Replacing missing values with mean value of its 5-minute interval
-```{r, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r, echo=TRUE,warning=FALSE, message=FALSE}
 
 fill.value <- function(steps,interval){
   filled <- NA
@@ -108,7 +108,7 @@ filled.data$steps <- mapply(fill.value, filled.data$steps, filled.data$interval)
 
 ```
 ##### 3. Using filled dataset to make histogram of total number of steps taken each day and calculate mean and median
-```{r,total steps per day after filling missing values, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r total_steps_per_day_after_filling_missing_values, echo=TRUE, warning=FALSE, message=FALSE}
 
 total.steps <- tapply (filled.data$steps, filled.data$date, FUN = sum)
 qplot(total.steps, binwidth = 500, xlab = 'total number of steps taken each day')
@@ -123,7 +123,7 @@ The values are higher then before with missing data because those missing values
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ##### 1. Create new factor variable with two levels ??? ???weekday??? and ???weekend???
-```{r, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r, echo=TRUE,  warning=FALSE, message=FALSE}
 
 weekday.or.weekend <- function(date){
   day <- weekdays(date)
@@ -138,7 +138,7 @@ filled.data$day <- sapply(filled.data$date, FUN = weekday.or.weekend)
 
 ```
 ##### 2. Panel plot containing a time series plot
-```{r,steps Vs interval on weekday and weekend, echo=TRUE, results='hide', warning=FALSE, message=FALSE}
+```{r steps_Vs_interval_on_weekday_and_weekend, echo=TRUE,  warning=FALSE, message=FALSE}
 
 average <- aggregate(steps ~ interval + day, data = filled.data ,mean)
 ggplot(average,aes(interval, steps))+
